# university-db

./: CMakeLists.txt  README.md  database.cpp  database.hpp  generator.cpp  generator.hpp  generators.cpp  main.cpp  menu.cpp  menu.hpp  printing.cpp  printing.hpp  record.cpp  record.hpp  storage.cpp  storage.hpp
.github/workflows/: cmake.yml
